<resources>
    <string name="app_name">Ramblers Walk Finder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walk_finder">Walk Finder</string>
    <string name="wolds_view">Wolds view near Cranswick</string>
    <string name="groups">Groups</string>
    <string name="east_yorkshire">East Yorkshire</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="distance">Distance</string>
    <string name="any_distance">Any distance</string>
    <string name="manage_distance">Manage Distance</string>
    <string name="days">Days</string>
    <string name="any_day">Any Day</string>
    <string name="manage_days">Manage Days</string>
    <string name="minumum_miles">Minimum Miles</string>
    <string name="back">Back</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="everyday">Every Day</string>
    <string name="none">None</string>
    <string name="anygroup">Any group</string>

</resources>
