<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/groupTitle"
            android:text="@string/groups"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/heading_style" />

        <TextView
            android:id="@+id/groups_label"
            android:text="@string/east_yorkshire"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupTitle"
            style="@style/body_style" />

        <Button
            android:id="@+id/manage_groups"
            style="@style/button_style"
            android:text="@string/manage_groups"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groups_label" />

        <TextView
            android:id="@+id/distanceTitle"
            style="@style/heading_style"
            android:text="@string/distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manage_groups" />

        <TextView
            android:id="@+id/distance_label"
            style="@style/body_style"
            android:text="@string/any_distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceTitle" />

        <Button
            android:id="@+id/manage_distance"
            style="@style/button_style"
            android:text="@string/manage_distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distance_label" />

        <TextView
            android:id="@+id/daysTitle"
            style="@style/heading_style"
            android:text="@string/days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manage_distance" />

        <TextView
            android:id="@+id/days_label"
            style="@style/body_style"
            android:text="@string/any_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daysTitle" />

        <Button
            android:id="@+id/manage_days"
            style="@style/button_style"
            android:text="@string/manage_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/days_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>